# specterprobe

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/acquisition/: android.rs  dtb.rs  extract.rs  mod.rs  probe.rs  sparse.rs
src/behavior/: analyzer.rs  mod.rs  namedb.rs  types.rs
src/compat/: common.rs  dsp.rs  gpu.rs  isp.rs  mod.rs  types.rs
src/compat/backend/: mod.rs
src/generate/: mod.rs  qemu.rs  redox.rs
src/genome/: export.rs  mod.rs  schema.rs
src/knowledge/: builders.rs  export.rs  graph.rs  mod.rs  query.rs
src/lift/: analysis.rs  cfg.rs  disasm.rs  ir.rs  mod.rs  pe.rs  types.rs
src/mmio/: classify.rs  mod.rs  scanner.rs  types.rs
