[package]
name = "specter-probe"
version = "0.1.0"
edition = "2021"
description = "EAEA — Embedded Architecture Exploration Agent: firmware acquisition, LLVM reverse core, behavioral modeling"
license = "AGPL-3.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
abootimg-oxide = "0.5"
android-sparse = "0.6"
ext4-view = "0.9"
am-fs-erofs = "0.1"
am-fs-core = "0.2"
capstone = "0.14"
device_tree_parser = "0.4"
walkdir = "2"
tempfile = "3"
hex = "0.4"
sha2 = "0.10"

[lib]
name = "specter_probe"
path = "src/lib.rs"

[[bin]]
name = "specter-probe"
path = "src/main.rs"
